Actualización final: diseño y funcionalidades completas

--- a/accounts/templates/accounts/password_change.html
+++ b/accounts/templates/accounts/password_change.html
@@ -1,10 +1,29 @@
 {% extends "base.html" %}
 
 {% block main %}
-<form action="" method="POST">
-  {{ form.as_p }}
-  {% csrf_token %}
-  <button type="submit">Cambiar contraseña</button>
-</form>
-<a href="{% url 'user_detail' user.id %}">Volver</a>
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card shadow-lg rounded-3 border-0">
+        <div class="card-header text-center" style="background-color: #2C3E50; color: white;">
+          <h3 class="mb-0">Cambiar Contraseña</h3>
+        </div>
+        <div class="card-body" style="background-color: #ffffff;">
+          <form action="" method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="d-grid gap-2 mt-4">
+              <button type="submit" class="btn btn-primary">Cambiar Contraseña</button>
+            </div>
+          </form>
+        </div>
+        <div class="card-footer text-center" style="background-color: #ffffff;">
+          <a href="{% url 'user_detail' user.id %}" class="btn btn-outline-secondary">
+            <i class="bi bi-arrow-left-circle"></i> Volver
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
