--- a/static/tasks/css/normalize.css
+++ b/static/tasks/css/normalize.css
@@ -210,12 +210,14 @@ select {
  * Correct the inability to style clickable types in iOS and Safari.
  */
 
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
+ button,
+ [type="button"],
+ [type="reset"],
+ [type="submit"] {
+   -webkit-appearance: button; /* para Safari */
+   -moz-appearance: button;    /* para Firefox */
+   appearance: button;         /* propiedad estándar */
+ }
 
 /**
  * Remove the inner border and padding in Firefox.
@@ -313,12 +315,13 @@ textarea {
  * 2. Correct the outline style in Safari.
  */
 
-[type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  outline-offset: -2px;
-  /* 2 */
+ [type="search"] {
+  -webkit-appearance: textfield; /* para Safari */
+  -moz-appearance: textfield;    /* para Firefox */
+  appearance: textfield;         /* propiedad estándar */
+  outline-offset: -2px;          /* para ajustar el espacio del borde */
 }
+
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
