--- a/accounts/templates/accounts/user_detail.html
+++ b/accounts/templates/accounts/user_detail.html
@@ -1,22 +1,41 @@
 {% extends "base.html" %}
 
 {% block main %}
-<table class="table">
-  <tbody>
-    <tr>
-      <th>Nombre de usuario</th>
-      <td>{{ user.username }}</td>
-    </tr>
-    <tr>
-      <th>Direccion de email</th>
-      <td>{{ user.email }}</td>
-    </tr>
-    <tr>
-      <th>Edad</th>
-      <td>{{ user.age }}</td>
-    </tr>
-  </tbody>
-</table>
-<a href="{% url 'user_update' user.pk %}">Editar</a> 
-<a href="{% url 'password_change' %}">Cambiar contraseña</a>
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card shadow-lg rounded-3 border-0">
+        <div class="card-header bg-dark text-white text-center">
+          <h3>Detalles del Usuario</h3>
+        </div>
+        <div class="card-body">
+          <table class="table">
+            <tbody>
+              <tr>
+                <th>Nombre de usuario</th>
+                <td>{{ user.username }}</td>
+              </tr>
+              <tr>
+                <th>Dirección de email</th>
+                <td>{{ user.email }}</td>
+              </tr>
+              <tr>
+                <th>Edad</th>
+                <td>{{ user.age }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="card-footer text-center">
+          <a href="{% url 'user_update' user.pk %}" class="btn btn-warning">
+            <i class="bi bi-pencil-square"></i> Editar Información
+          </a>
+          <a href="{% url 'password_change' %}" class="btn btn-info">
+            <i class="bi bi-shield-lock"></i> Cambiar Contraseña
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
