--- a/accounts/templates/accounts/user_edit.html
+++ b/accounts/templates/accounts/user_edit.html
@@ -1,11 +1,34 @@
 {% extends "base.html" %}
 
 {% block main %}
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="actualizar">
-</form>
-<a href="{% url 'user_detail' user.id %}">Volver</a>
-<a href="{% url 'user_delete' user.id %}">Dar de baja</a>
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card shadow-lg rounded-3 border-0">
+        <div class="card-header bg-dark text-white text-center">
+          <h3>Actualizar Información de Usuario</h3>
+        </div>
+        <div class="card-body">
+          <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <div class="d-grid gap-2">
+              <button type="submit" class="btn btn-success">
+                <i class="bi bi-save"></i> Actualizar
+              </button>
+            </div>
+          </form>
+        </div>
+        <div class="card-footer text-center">
+          <a href="{% url 'user_detail' user.id %}" class="btn btn-secondary">
+            <i class="bi bi-arrow-left-circle"></i> Volver
+          </a>
+          <a href="{% url 'user_delete' user.id %}" class="btn btn-danger">
+            <i class="bi bi-trash"></i> Dar de Baja
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
