--- a/tasks/templates/tasks/create.html
+++ b/tasks/templates/tasks/create.html
@@ -1,14 +1,34 @@
 {% extends "base.html" %}
 
 {% block main %}
-<h1>Pagina de registro de prueba</h1>
-<form action="{% url 'tasks:create' %}" method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="registrarse">
-</form>
-
-<br>
-
-<a href="{% url 'tasks:index' %}">Volver</a>
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card shadow-lg rounded-3 border-0">
+        <div class="card-header bg-dark text-white text-center">
+          <h2>Crear Nueva Tarea</h2>
+        </div>
+        <div class="card-body">
+          <form action="{% url 'tasks:create' %}" method="post">
+            {% csrf_token %}
+            <div class="mb-3">
+              {{ form.as_p }}
+            </div>
+            <div class="d-grid gap-2">
+              <!-- Botón con icono de check -->
+              <button type="submit" class="btn btn-primary btn-block">
+                <i class="bi bi-check-circle"></i> Crear Tarea
+              </button>
+            </div>
+          </form>
+        </div>
+        <div class="card-footer text-center">
+          <a href="{% url 'tasks:index' %}" class="btn btn-secondary">
+            <i class="bi bi-arrow-left-circle"></i> Volver al inicio
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
