--- a/tasks/templates/tasks/delete.html
+++ b/tasks/templates/tasks/delete.html
@@ -1,22 +1,35 @@
 {% extends "base.html" %}
 
 {% block main %}
-<h1>Pagina de eliminacion de tareas</h1>
-<p>
-  <strong>Titulo:</strong>
-  {{task.title}}
-</p>
-
-<p>
-  <strong>Contenido:</strong>
-  {{task.content}}
-</p>
-<form action="{% url 'tasks:delete' task.id %}" method="post">
-  {% csrf_token %}
-  <input type="submit" value="eliminar">
-</form>
-
-<br>
-
-<a href="{% url 'tasks:index' %}">Volver</a>
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card shadow-lg rounded-3 border-0">
+        <div class="card-header bg-dark text-white text-center">
+          <h2>Eliminar Tarea</h2>
+        </div>
+        <div class="card-body">
+          <p><strong>Título:</strong> {{ task.title }}</p>
+          <p><strong>Contenido:</strong> {{ task.content }}</p>
+          <p class="text-danger">
+            <strong>¡Advertencia!</strong> Esta acción eliminará permanentemente la tarea. ¿Estás seguro de que deseas continuar?
+          </p>
+          <form action="{% url 'tasks:delete' task.id %}" method="post">
+            {% csrf_token %}
+            <div class="d-grid gap-2">
+              <button type="submit" class="btn btn-danger btn-block">
+                Eliminar Tarea
+              </button>
+            </div>
+          </form>
+        </div>
+        <div class="card-footer text-center">
+          <a href="{% url 'tasks:index' %}" class="btn btn-secondary">
+            <i class="bi bi-arrow-left-circle"></i> Volver a la Lista
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
