--- a/tasks/templates/tasks/detail.html
+++ b/tasks/templates/tasks/detail.html
@@ -1,16 +1,34 @@
 {% extends "base.html" %}
 
 {% block main %}
-<h1>Detalles de la tarea</h1>
-<p>
-  <strong>Titulo:</strong>
-  {{task.title}}
-</p>
-
-<p>
-  <strong>Contenido:</strong>
-  {{task.content}}
-</p>
-<a href="{% url 'tasks:index' %}">Home</a> |
-<a href="{% url 'tasks:edit' task.id %}">Editar</a>
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card shadow-lg rounded-3 border-0">
+        <div class="card-header bg-dark text-white text-center">
+          <h2>Detalles de la Tarea</h2>
+        </div>
+        <div class="card-body">
+          <p>
+            <strong>Título:</strong>
+            <span class="text-muted">{{ task.title }}</span>
+          </p>
+          <p>
+            <strong>Contenido:</strong>
+            <span class="text-muted">{{ task.content }}</span>
+          </p>
+        </div>
+        <div class="card-footer text-center">
+          <a href="{% url 'tasks:index' %}" class="btn btn-primary">
+            <i class="bi bi-house-door"></i> Volver a la Lista
+          </a>
+          <a href="{% url 'tasks:edit' task.id %}" class="btn btn-warning">
+            <i class="bi bi-pencil-square"></i> Editar
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
+
