--- a/tasks/templates/tasks/edit.html
+++ b/tasks/templates/tasks/edit.html
@@ -1,16 +1,36 @@
 {% extends "base.html" %}
 
 {% block main %}
-<h1>Edicion de tareas</h1>
-<form action="{% url 'tasks:edit' task.id %}" method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="actualizar">
-</form>
-
-<br>
-
-<a href="{% url 'tasks:detail' task.id %}">Detalles</a> |
-<a href="{% url 'tasks:index' %}">Volver</a>
-
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card shadow-lg rounded-3 border-0">
+        <div class="card-header bg-dark text-white text-center">
+          <h2>Editar Tarea</h2>
+        </div>
+        <div class="card-body">
+          <form action="{% url 'tasks:edit' task.id %}" method="post">
+            {% csrf_token %}
+            <div class="mb-3">
+              {{ form.as_p }}
+            </div>
+            <div class="d-grid gap-2">
+              <button type="submit" class="btn btn-success btn-block">
+                Actualizar Tarea
+              </button>
+            </div>
+          </form>
+        </div>
+        <div class="card-footer text-center">
+          <a href="{% url 'tasks:detail' task.id %}" class="btn btn-info">
+            <i class="bi bi-eye"></i> Ver Detalles
+          </a>
+          <a href="{% url 'tasks:index' %}" class="btn btn-primary">
+            <i class="bi bi-arrow-left-circle"></i> Volver a la Lista
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
