--- a/tasks/templates/tasks/index.html
+++ b/tasks/templates/tasks/index.html
@@ -1,33 +1,50 @@
 {% extends "base.html" %}
 
 {% block main %}
-<div class="my-5">
-    <h1 class="text-center text-primary">Lista de Tareas</h1>
-    <div class="table-responsive">
-        <table class="table table-bordered table-hover">
-            <thead class="table-dark">
-                <tr>
-                    <th>Título</th>
-                    <th>Contenido</th>
-                    <th colspan="3" class="text-center">Acciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for task in tasks %}
-                <tr>
-                    <td>{{ task.title }}</td>
-                    <td>{{ task.content }}</td>
-                    <td><a href="{% url 'tasks:detail' task.id %}" class="btn btn-info btn-sm">Detalles</a></td>
-                    <td><a href="{% url 'tasks:edit' task.id %}" class="btn btn-warning btn-sm">Editar</a></td>
-                    <td><a href="{% url 'tasks:delete' task.id %}" class="btn btn-danger btn-sm">Eliminar</a></td>
-                </tr>
-                {% endfor %}
-            </tbody>
+<div class="container my-5">
+  <h1 class="text-center text-primary mb-4">Lista de Tareas</h1>
+  <div class="card shadow-lg rounded-3 border-0">
+    <div class="card-body p-4">
+      <div class="table-responsive">
+        <table class="table table-striped table-bordered table-hover">
+          <thead class="table-dark">
+            <tr>
+              <th class="text-center">Título</th>
+              <th class="text-center">Contenido</th>
+              <th colspan="3" class="text-center">Acciones</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for task in tasks %}
+            <tr>
+              <td class="text-center">{{ task.title }}</td>
+              <td>{{ task.content }}</td>
+              <td class="text-center">
+                <a href="{% url 'tasks:detail' task.id %}" class="btn btn-info btn-sm">
+                  <i class="bi bi-info-circle"></i> Detalles
+                </a>
+              </td>
+              <td class="text-center">
+                <a href="{% url 'tasks:edit' task.id %}" class="btn btn-warning btn-sm">
+                  <i class="bi bi-pencil-square"></i> Editar
+                </a>
+              </td>
+              <td class="text-center">
+                <a href="{% url 'tasks:delete' task.id %}" class="btn btn-danger btn-sm">
+                  <i class="bi bi-trash"></i> Eliminar
+                </a>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
         </table>
+      </div>
+      <div class="text-center mt-4">
+        <a href="{% url 'tasks:create' %}" class="btn btn-success btn-lg">
+          <i class="bi bi-plus-circle"></i> Crear Nueva Tarea
+        </a>
+      </div>
     </div>
-
-    <div class="text-center mt-4">
-        <a href="{% url 'tasks:create' %}" class="btn btn-success">Crear Nuevo</a>
-    </div>
+  </div>
 </div>
 {% endblock %}
