--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="{% static 'tasks/css/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'tasks/css/style.css' %}">
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body>
@@ -25,24 +27,56 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'tasks:index' %}">Lista de Tareas</a>
+                    <!-- Enlaces con iconos en pantallas pequeñas -->
+                    <li class="nav-item d-lg-none">
+                        <a class="nav-link" href="{% url 'tasks:index' %}">
+                            <i class="bi bi-list-task text-white"></i> Lista de Tareas
+                        </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'user_detail' user.pk %}">Información de Miembros</a>
+                    <li class="nav-item d-lg-none">
+                        <a class="nav-link" href="{% url 'user_detail' user.pk %}">
+                            <i class="bi bi-person text-white"></i> Informacion de Miembros
+                        </a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item d-lg-none">
                         <form id="logoutForm" method="post" action="{% url 'logout' %}" style="display: inline;">
                             {% csrf_token %}
-                            <button type="submit" class="btn btn-link nav-link">Cerrar sesión</button>
+                            <button type="submit" class="btn btn-link nav-link">
+                                <i class="bi bi-box-arrow-right text-white"></i> Cerrar sesión
+                            </button>
+                        </form>
+                    </li>
+
+                    <!-- Enlaces con iconos en pantallas grandes -->
+                    <li class="nav-item d-none d-lg-block">
+                        <a class="nav-link" href="{% url 'tasks:index' %}">
+                            <i class="bi bi-list-task text-white"></i> Lista de Tareas
+                        </a>
+                    </li>
+                    <li class="nav-item d-none d-lg-block">
+                        <a class="nav-link" href="{% url 'user_detail' user.pk %}">
+                            <i class="bi bi-person text-white"></i> Información de Miembros
+                        </a>
+                    </li>
+                    <li class="nav-item d-none d-lg-block">
+                        <form id="logoutForm" method="post" action="{% url 'logout' %}" style="display: inline;">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-link nav-link">
+                                <i class="bi bi-box-arrow-right text-white"></i> Cerrar sesión
+                            </button>
                         </form>
                     </li>
                     {% else %}
+                    <!-- Enlaces para no autenticados -->
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Iniciar sesión</a>
+                        <a class="nav-link" href="{% url 'login' %}">
+                            <i class="bi bi-box-arrow-in-right text-white"></i> Iniciar sesión
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'signup' %}">Registrar usuario</a>
+                        <a class="nav-link" href="{% url 'signup' %}">
+                            <i class="bi bi-person-plus text-white"></i> Registrar usuario
+                        </a>
                     </li>
                     {% endif %}
                 </ul>
